updating skeuomorph to use new java_package

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,9 @@ project/plugins/project/
 *.metals
 .bloop/
 .metals/
+.vscode/
 project/.bloop/
+project/project/
 project/metals.sbt
 
 ### Vim ###
