Fixes scalameta warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         run: test -f .github/actions.yml && eval "$(yq e '.pre.ci // "true"' .github/actions.yml)" || true
       - name: Run scalafmt on Scala Steward PRs
         if: github.event.pull_request.user.login == '47erbot' && contains(github.event.pull_request.body, 'Scala Steward')
-        run: sbt "scalafixEnable; fix" || sbt "scalafmtAll; scalafmtSbt" || true
+        run: sbt "scalafmtAll; scalafmtSbt" || true
       - name: Push changes
         uses: stefanzweifel/git-auto-commit-action@v4.5.1
         with:
