--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -24,3 +24,8 @@ rewrite {
   rules = [SortImports, RedundantBraces]
   redundantBraces.maxLines = 1
 }
+fileOverride {
+  "glob:**/plugin/src/main/scala/**" {
+     runner.dialect = scala212source3
+  }
+}
